[gd_scene load_steps=5 format=2]

[ext_resource path="res://Cenas/EnemyMovement.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]

[sub_resource type="SphereShape" id=2]

[sub_resource type="CylinderMesh" id=3]

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 1 )
velocidade = 5.0

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.297452, -0.11355, -0.150875 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 4.68228, 0, 0, 0, -0.967425, 0, 0, 0, 4.68228, -0.0956321, 0.0862979, 0 )
shape = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 3 )

[connection signal="area_entered" from="Area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_area_area_exited"]
