[gd_scene load_steps=11 format=2]

[ext_resource path="res://Cenas/level-basico.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cenas/3DCharacter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/EnemyMovement.gd" type="Script" id=3]
[ext_resource path="res://Cenas/CameraFollow.gd" type="Script" id=4]
[ext_resource path="res://Cenas/Detector.gd" type="Script" id=5]

[sub_resource type="PrismMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="CylinderShape" id=3]
radius = 2.57283

[sub_resource type="BoxShape" id=4]
extents = Vector3( 5.31317, 1, 5.60701 )

[sub_resource type="SphereShape" id=5]

[node name="Cena-Movimento" type="Spatial"]

[node name="chao" parent="." instance=ExtResource( 1 )]
transform = Transform( 2.04892, 0, 0, 0, 2.04892, 0, 0, 0, 2.04892, 0, 0, 0 )

[node name="chao2" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.0987676, 0, -2.04654, 0, 2.04892, 0, 2.04654, 0, -0.0987676, 0, 0, 10.8277 )

[node name="3DCharacter" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.279824, 0, 0, 0, 0.279824, 0, 0, 0, 0.279824, -0.00599957, 1.61617, 1.3261 )

[node name="Enemy" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.48723, 0.952822, -3.34507 )
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Enemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.100009, 0.311785, 0 )
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Enemy"]
shape = SubResource( 2 )

[node name="Area" type="Area" parent="Enemy"]

[node name="CollisionShape" type="CollisionShape" parent="Enemy/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0956321, -0.0163951, 0 )
shape = SubResource( 3 )

[node name="Area" type="Area" parent="." groups=["focus_areas"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0155497, 6.14431, -10.5367 )
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1.00597, 0, 0, 0, 1.98825, 0, 0, 0, 1.00597, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Area3" type="Area" parent="." groups=["focus_areas"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.41969, 6.73776, 11.4301 )
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Area3"]
transform = Transform( 1.00597, 0, 0, 0, 1.98825, 0, 0, 0, 1.00597, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Area4" type="Area" parent="." groups=["focus_areas"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.698872, 2.82543, 11.4301 )
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Area4"]
transform = Transform( 1.00597, 0, 0, 0, 1.98825, 0, 0, 0, 1.00597, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Area2" type="Area" parent="." groups=["focus_areas"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0256472, 2.04774, 0.403436 )
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Area2"]
transform = Transform( 1.00597, 0, 0, 0, 1.98825, 0, 0, 0, 1.00597, 0, 0, 0 )
shape = SubResource( 4 )

[node name="CollisionShape2" type="CollisionShape" parent="Area2"]
transform = Transform( 1.00597, 0, 0, 0, 1.98825, 0, 0, 0, 1.00597, 0, 0, 10.9287 )
shape = SubResource( 4 )

[node name="pivot" type="Spatial" parent="."]
transform = Transform( 0.707107, 0.5, -0.5, 0, 0.707106, 0.707107, 0.707107, -0.5, 0.5, -7.17497, 13.3756, 10.4408 )
script = ExtResource( 4 )

[node name="SpringArm" type="SpringArm" parent="pivot"]
shape = SubResource( 5 )
spring_length = 30.0
margin = 0.0

[node name="Camera" type="Camera" parent="pivot/SpringArm"]
projection = 1
current = true
size = 15.0
near = 0.01
far = 200.0

[connection signal="body_entered" from="Area" to="Area" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="Area" method="_on_Area_body_exited"]
[connection signal="body_entered" from="Area3" to="Area3" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area3" to="Area3" method="_on_Area_body_exited"]
[connection signal="body_entered" from="Area4" to="Area4" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area4" to="Area4" method="_on_Area_body_exited"]
[connection signal="body_entered" from="Area2" to="Area2" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area2" to="Area2" method="_on_Area_body_exited"]
